--- a/views/returnbook.pug
+++ b/views/returnbook.pug
@@ -15,7 +15,7 @@ block content
     strong Return By:
     |  #{loan.return_by}
 
-  form(action='?_method=PUT', method='post')
+  form(action="?_method=PUT", method="POST")
     p
       label(for='returned_on')
       strong Returned On:
