--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,8 @@
-extends layout
 
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+if(errors)
+  h2(class='errorMessage') DOH! We have encountered an error!
+  ul(class='errorMessage')
+    each error in errors
+      li
+        =error.message
+
