--- a/views/newbook.pug
+++ b/views/newbook.pug
@@ -1,12 +1,14 @@
 extends layout
 
 block content
+  if errors
+      include error
   h1 New Book
   form(method='post')
     - if (bookTitle) {
       p
         label(for='title') Title
-        input#title(type='text' name='title' value='#{bookTitle}')
+        input#title(type='text' name='title' value='#{book.title}')
     - } else {
       p
         label(for='title') Title
@@ -15,7 +17,7 @@ block content
     - if (bookAuthor) {
       p
         label(for='author') Author
-        input#author(type='text' name='author' value='#{bookAuthor}')
+        input#author(type='text' name='author' value='#{book.author}')
     - } else {
       p
         label(for='author') Author
@@ -24,7 +26,7 @@ block content
     - if (bookGenre) {
       p
         label(for='genre') Genre
-        input#genre(type='text' name='genre' value='#{bookGenre}')
+        input#genre(type='text' name='genre' value='#{book.genre}')
     - } else {
       p
         label(for='genre') Genre
@@ -33,7 +35,7 @@ block content
     - if (bookPublished) {
       p
         label(for='first_published') First Published
-        input#first_published(type='text' name='first_published' value='#{bookPublished}')
+        input#first_published(type='text' name='first_published' value='#{book.published}')
     - } else {
       p
         label(for='first_published') First Published
@@ -43,5 +45,3 @@ block content
       input#button(type='submit' value='Create New Book')
 
 
-  if errors
-    include error
