--- a/views/newpatron.pug
+++ b/views/newpatron.pug
@@ -1,12 +1,14 @@
 extends layout
-
+  
 block content
+  if errors
+    include error
   h1 New Patron
   form(method='post')
     - if (patronFirstName) {
       p
         label(for='first_name') First Name
-        input#first_name(type='text' name='first_name' value='#{patronFirstName}')
+        input#first_name(type='text' name='first_name' value='#{patron.first_name}')
     - } else {
       p
         label(for='first_name') First Name
@@ -15,7 +17,7 @@ block content
     - if (patronLastName) {
       p
         label(for='last_name') Last Name
-        input#last_name(type='text' name='last_name' value='#{patronLastName}')
+        input#last_name(type='text' name='last_name' value='#{patron.last_name}')
     - } else {
       p
         label(for='last_name') Last Name
@@ -24,7 +26,7 @@ block content
     - if (patronAddress) {
       p
         label(for='address') Address
-        input#address(type='text' name='address' value='#{patronAddress}')
+        input#address(type='text' name='address' value='#{patron.address}')
     - } else {
       p
         label(for='address') Address
@@ -33,7 +35,7 @@ block content
     - if (patronEmail) {
       p
         label(for='email') Email
-        input#email(type='text' name='email' value='#{patronEmail}')
+        input#email(type='text' name='email' value='#{patron.email}')
     - } else {
       p
         label(for='email') Email
@@ -42,7 +44,7 @@ block content
     - if (patronLibraryId) {
       p
         label(for='library_id') Library ID
-        input#library_id(type='text' name='library_id' value='#{patronLibraryId}')
+        input#library_id(type='text' name='library_id' value='#{patron.library_id}')
     - } else {
       p
         label(for='library_id') Library ID
@@ -51,7 +53,7 @@ block content
     - if (patronZipCode) {
       p
         label(for='zip_code') Zip Code
-        input#zip_code(type='text' name='zip_code' value='#{patronZipCode}')
+        input#zip_code(type='text' name='zip_code' value='#{patron.zip_code}')
     - } else {
       p
         label(for='zip_code') Zip Code
@@ -60,5 +62,4 @@ block content
     p
       input(type='submit' value='Create New Patron')
 
-  if errors
-    include error
+
