--- a/views/patrondetail.pug
+++ b/views/patrondetail.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
   h1 Patron: #{patron.first_name} #{patron.last_name}
-  form(action='/patrons/' + patron.id + '?_method=PUT', method='post')
+  //- form(action='/patrons/' + patron.id + '?_method=PUT', method='post')
+  form(action='?_method=PUT', method='post')
+
     p
       label(for='first_name') First Name
       input#first_name(type='text' name='first_name' value=patron.first_name)
